--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 # Cách tham số được khai báo theo định dạng KEY - VALUE
 # Note: ko cần bao bọc " " or ' '
 
+NODE_ENV = development
+
 PORT = 3000
 
 HOST_NAME = localhost
