--- a/.env
+++ b/.env
@@ -2,8 +2,14 @@
 # Cách tham số được khai báo theo định dạng KEY - VALUE
 # Note: ko cần bao bọc " " or ' '
 
-NODE_ENV = development
+NODE_ENV=development
+PORT=3000
 
-PORT = 3000
+HOST_NAME=localhost
 
-HOST_NAME = localhost
+# connection database
+DB_HOST=localhost
+DB_PORT=3307
+DB_USER=root
+DB_PASSWORD=123456
+DB_NAME=ryo_it
